@@ -2,12 +2,12 @@ package org.opentripplanner.ext.fares.impl;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.opentripplanner.ext.fares.impl.FareModelForTest.AIRPORT_STOP;
 import static org.opentripplanner.ext.fares.impl.FareModelForTest.AIRPORT_TO_CITY_CENTER_SET;
 import static org.opentripplanner.ext.fares.impl.FareModelForTest.CITY_CENTER_A_STOP;
 import static org.opentripplanner.ext.fares.impl.FareModelForTest.CITY_CENTER_B_STOP;
+import static org.opentripplanner.ext.fares.impl.FareModelForTest.CITY_CENTER_C_STOP;
+import static org.opentripplanner.ext.fares.impl.FareModelForTest.FREE_TRANSFERS_IN_CITY_SET;
 import static org.opentripplanner.ext.fares.impl.FareModelForTest.INSIDE_CITY_CENTER_SET;
 import static org.opentripplanner.ext.fares.impl.FareModelForTest.OTHER_FEED_ATTRIBUTE;
 import static org.opentripplanner.ext.fares.impl.FareModelForTest.OTHER_FEED_ROUTE;
@@ -18,6 +18,9 @@ import static org.opentripplanner.model.plan.TestItineraryBuilder.newItinerary;
 
 import java.util.List;
 import org.junit.jupiter.api.Test;
+import org.opentripplanner.model.fare.FareProduct;
+import org.opentripplanner.model.fare.FareProductUse;
+import org.opentripplanner.model.fare.ItineraryFares;
 import org.opentripplanner.model.plan.Place;
 import org.opentripplanner.model.plan.PlanTestConstants;
 import org.opentripplanner.routing.core.FareType;
@@ -27,7 +30,12 @@ import org.opentripplanner.transit.model.basic.Money;
 class DefaultFareServiceTest implements PlanTestConstants {
 
   private static final Money TEN_DOLLARS = Money.usDollars(10);
-  private static final Money TWENTY_DOLLARS = Money.usDollars(20);
+  private static final FareProduct OTHER_FEED_PRODUCT = FareProduct
+    .of(OTHER_FEED_ATTRIBUTE.getId(), "regular", TEN_DOLLARS)
+    .build();
+  private static final FareProduct AIRPORT_TO_CITY_CENTER_PRODUCT = FareProduct
+    .of(AIRPORT_TO_CITY_CENTER_SET.getFareAttribute().getId(), "regular", TEN_DOLLARS)
+    .build();
 
   @Test
   void noRules() {
@@ -35,7 +43,7 @@ class DefaultFareServiceTest implements PlanTestConstants {
     service.addFareRules(FareType.regular, List.of());
     var itin = newItinerary(A, T11_00).bus(1, T11_05, T11_12, B).build();
     var fare = service.calculateFares(itin);
-    assertNull(fare);
+    assertEquals(ItineraryFares.empty(), fare);
   }
 
   @Test
@@ -48,21 +56,53 @@ class DefaultFareServiceTest implements PlanTestConstants {
     var fare = service.calculateFares(itin);
     assertNotNull(fare);
 
-    var price = fare.getFare(FareType.regular);
+    var legProducts = fare.getLegProducts().get(itin.getTransitLeg(0));
+    assertEquals(
+      List.of(
+        // reminder: the FareProductUse's id are a (non-random) UUID computed from the start time of the leg
+        // plus some properties from the product itself like the id, price, rider category and medium
+        new FareProductUse("1d270201-412b-3b86-80f6-92ab144fa2e5", AIRPORT_TO_CITY_CENTER_PRODUCT)
+      ),
+      legProducts
+    );
+  }
 
-    assertEquals(TEN_DOLLARS, price);
+  @Test
+  void applyToSeveralLegs() {
+    var service = new DefaultFareService();
+    service.addFareRules(FareType.regular, List.of(FREE_TRANSFERS_IN_CITY_SET));
+    var itin = newItinerary(Place.forStop(CITY_CENTER_A_STOP), T11_00)
+      .bus(1, T11_00, T11_12, Place.forStop(CITY_CENTER_B_STOP))
+      .bus(1, T11_16, T11_20, Place.forStop(CITY_CENTER_C_STOP))
+      .build();
 
-    var fp = fare.getItineraryProducts().get(0);
-    assertEquals(TEN_DOLLARS, fp.price());
-    assertEquals("F:regular", fp.id().toString());
+    var fare = service.calculateFares(itin);
+    assertNotNull(fare);
 
-    var lp = fare.legProductsFromComponents();
-    assertEquals(1, lp.size());
-    var product = lp.values().iterator().next().product();
-    assertEquals(TEN_DOLLARS, product.price());
+    var legProducts = fare.getLegProducts();
 
-    // the leg products from the components and the "true" leg products are different collections
-    assertTrue(fare.getLegProducts().isEmpty());
+    var firstLeg = itin.getTransitLeg(0);
+    var secondLeg = itin.getTransitLeg(1);
+
+    var firstProducts = legProducts.get(firstLeg);
+    var secondProducts = legProducts.get(secondLeg);
+
+    assertEquals(firstProducts, secondProducts);
+    assertEquals(
+      List.of(
+        new FareProductUse(
+          "ddbf1572-18bc-3724-8b64-e1c7d5c8b6c6",
+          FareProduct
+            .of(
+              FREE_TRANSFERS_IN_CITY_SET.getFareAttribute().getId(),
+              "regular",
+              TEN_DOLLARS.plus(TEN_DOLLARS)
+            )
+            .build()
+        )
+      ),
+      firstProducts
+    );
   }
 
   @Test
@@ -87,25 +127,22 @@ class DefaultFareServiceTest implements PlanTestConstants {
     var fare = service.calculateFares(itin);
     assertNotNull(fare);
 
-    var price = fare.getFare(FareType.regular);
+    var legProducts = fare.getLegProducts();
 
-    assertEquals(TWENTY_DOLLARS, price);
-
-    assertTrue(fare.getLegProducts().isEmpty());
-
-    var legProductsFromComponents = fare.legProductsFromComponents();
-
-    var firstLeg = itin.getLegs().get(0);
-    var products = List.copyOf(legProductsFromComponents.get(firstLeg));
-
-    assertEquals(TEN_DOLLARS, products.get(0).product().price());
-
+    var firstLeg = itin.getLegs().getFirst();
     var secondLeg = itin.getLegs().get(1);
-    products = List.copyOf(legProductsFromComponents.get(secondLeg));
-    assertEquals(TEN_DOLLARS, products.get(0).product().price());
-
-    assertEquals(1, fare.getItineraryProducts().size());
-    assertEquals(TWENTY_DOLLARS, fare.getItineraryProducts().get(0).price());
+    assertEquals(
+      List.of(
+        new FareProductUse("ccadd1d3-f284-31a4-9d58-0a300198950f", AIRPORT_TO_CITY_CENTER_PRODUCT)
+      ),
+      legProducts.get(firstLeg)
+    );
+    assertEquals(
+      List.of(
+        new FareProductUse("c58974dd-9a2f-3f42-90ec-c62a7b0dfd51", AIRPORT_TO_CITY_CENTER_PRODUCT)
+      ),
+      legProducts.get(secondLeg)
+    );
   }
 
   @Test
@@ -121,21 +158,15 @@ class DefaultFareServiceTest implements PlanTestConstants {
     var fare = service.calculateFares(itin);
     assertNotNull(fare);
 
-    var price = fare.getFare(FareType.regular);
-    assertEquals(Money.usDollars(-0.01f), price);
+    var fareProducts = List.copyOf(fare.getLegProducts().values());
+    assertEquals(1, fareProducts.size());
 
-    var components = fare.getComponents(FareType.regular);
-    assertEquals(1, components.size());
+    var fp = fareProducts.get(0).product();
+    assertEquals(AIRPORT_TO_CITY_CENTER_SET.getFareAttribute().getId(), fp.id());
+    assertEquals(TEN_DOLLARS, fp.price());
 
-    var component = components.get(0);
-    assertEquals(AIRPORT_TO_CITY_CENTER_SET.getFareAttribute().getId(), component.fareId());
-    assertEquals(TEN_DOLLARS, component.price());
-
-    var firstBusLeg = itin.firstTransitLeg().get();
-    assertEquals(List.of(firstBusLeg), component.legs());
-
-    var legProductsFromComponent = fare.legProductsFromComponents();
-    assertEquals(1, legProductsFromComponent.size());
+    var legProducts = fare.getLegProducts();
+    assertEquals(1, legProducts.size());
   }
 
   @Test
@@ -149,20 +180,31 @@ class DefaultFareServiceTest implements PlanTestConstants {
       .build();
     var result = service.calculateFares(itin);
 
-    var resultComponents = result
-      .getComponents(FareType.regular)
+    var fareProductIds = result
+      .getLegProducts()
+      .values()
       .stream()
-      .map(r -> r.fareId())
+      .map(r -> r.product().id())
       .toList();
-
-    var resultPrice = result.getFare(FareType.regular);
 
     assertEquals(
       List.of(AIRPORT_TO_CITY_CENTER_SET.getFareAttribute().getId(), OTHER_FEED_ATTRIBUTE.getId()),
-      resultComponents
+      fareProductIds
     );
 
-    assertEquals(TWENTY_DOLLARS, resultPrice);
+    var legProducts = result.getLegProducts();
+    var firstBusLeg = itin.getTransitLeg(0);
+    assertEquals(
+      List.of(
+        new FareProductUse("1d270201-412b-3b86-80f6-92ab144fa2e5", AIRPORT_TO_CITY_CENTER_PRODUCT)
+      ),
+      legProducts.get(firstBusLeg)
+    );
+    var secondBusLeg = itin.getTransitLeg(2);
+    assertEquals(
+      List.of(new FareProductUse("678d201c-e839-35c3-ae7b-1bc3834da5e5", OTHER_FEED_PRODUCT)),
+      legProducts.get(secondBusLeg)
+    );
   }
 
   @Test
@@ -178,19 +220,26 @@ class DefaultFareServiceTest implements PlanTestConstants {
       .build();
     var result = service.calculateFares(itin);
 
-    var resultComponents = result
-      .getComponents(FareType.regular)
-      .stream()
-      .map(r -> r.fareId())
-      .toList();
+    var legProducts = result.getLegProducts();
 
-    var resultPrice = result.getFare(FareType.regular);
+    var firstBusLeg = itin.getTransitLeg(0);
+    var secondBusLeg = itin.getTransitLeg(2);
+    var finalBusLeg = itin.getTransitLeg(4);
+
     assertEquals(
-      List.of(INSIDE_CITY_CENTER_SET.getFareAttribute().getId(), OTHER_FEED_ATTRIBUTE.getId()),
-      resultComponents
+      List.of(new FareProductUse("5d0d58f4-b97a-38db-921c-8b5fc6392b54", OTHER_FEED_PRODUCT)),
+      legProducts.get(firstBusLeg)
     );
-
-    assertEquals(TWENTY_DOLLARS, resultPrice);
+    assertEquals(
+      List.of(
+        new FareProductUse("1d270201-412b-3b86-80f6-92ab144fa2e5", AIRPORT_TO_CITY_CENTER_PRODUCT)
+      ),
+      legProducts.get(secondBusLeg)
+    );
+    assertEquals(
+      List.of(new FareProductUse("5d0d58f4-b97a-38db-921c-8b5fc6392b54", OTHER_FEED_PRODUCT)),
+      legProducts.get(finalBusLeg)
+    );
   }
 
   @Test
@@ -203,13 +252,12 @@ class DefaultFareServiceTest implements PlanTestConstants {
       .bus(OTHER_FEED_ROUTE, 2, T11_20, T11_32, Place.forStop(OTHER_FEED_STOP))
       .build();
     var result = service.calculateFares(itin);
-    var resultComponents = result
-      .getComponents(FareType.regular)
+    var resultProductIds = result
+      .getLegProducts()
+      .values()
       .stream()
-      .map(r -> r.fareId())
+      .map(r -> r.product().id())
       .toList();
-    var resultPrice = result.getFare(FareType.regular);
-    assertEquals(List.of(OTHER_FEED_ATTRIBUTE.getId()), resultComponents);
-    assertEquals(Money.usDollars(-0.01f), resultPrice);
+    assertEquals(List.of(OTHER_FEED_ATTRIBUTE.getId()), resultProductIds);
   }
 }
